[gd_scene load_steps=13 format=3 uid="uid://jyrhlvipedil"]

[ext_resource type="Script" path="res://scripts/human_receptacle.gd" id="1_05dvp"]
[ext_resource type="Material" uid="uid://bsg2t3frmfjce" path="res://shaders/receptacle_material.tres" id="2_eieo8"]
[ext_resource type="PackedScene" uid="uid://bk6e6igwyvo4b" path="res://scenes/pickup_component.tscn" id="3_4anad"]
[ext_resource type="Material" uid="uid://rrcq2bsaxi3y" path="res://shaders/transparent_shader.tres" id="4_7jrsj"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_k8dcf"]

[sub_resource type="BoxMesh" id="BoxMesh_wnh4g"]
material = ExtResource("2_eieo8")

[sub_resource type="BoxMesh" id="BoxMesh_txx4o"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5otlv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_plppa"]
albedo_color = Color(0, 0.545098, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_msbfj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_evmdg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_etaps"]

[node name="HumanReceptacle" type="RigidBody3D"]
collision_priority = 100.0
mass = 18.079
physics_material_override = SubResource("PhysicsMaterial_k8dcf")
contact_monitor = true
max_contacts_reported = 3
script = ExtResource("1_05dvp")

[node name="HumanReceptacleMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_wnh4g")

[node name="Glass" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_txx4o")
surface_material_override/0 = ExtResource("4_7jrsj")

[node name="HumanReceptacleShape" type="CollisionShape3D" parent="."]
transform = Transform3D(0.825, 0, 0, 0, 0.825, 0, 0, 0, 0.825, 0, 0.0210883, 0)
shape = SubResource("BoxShape3D_5otlv")

[node name="GrinderHole" type="MeshInstance3D" parent="."]
transform = Transform3D(0.535, 0, 0, 0, 0.535, 0, 0, 0, 0.535, 0, 0.212816, 0)
material_override = SubResource("StandardMaterial3D_plppa")
mesh = SubResource("BoxMesh_msbfj")

[node name="HumanReceptacleGrinder" type="Area3D" parent="."]
transform = Transform3D(0.69, 0, 0, 0, 0.69, 0, 0, 0, 0.69, 0, 0.109901, 0)
collision_mask = 2

[node name="HumanReceptacleGrinderShape" type="CollisionShape3D" parent="HumanReceptacleGrinder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0487064, 0)
shape = SubResource("BoxShape3D_evmdg")

[node name="PickupComponent" parent="." instance=ExtResource("3_4anad")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickupComponent"]
shape = SubResource("BoxShape3D_etaps")

[connection signal="body_entered" from="HumanReceptacleGrinder" to="." method="_on_human_receptacle_grinder_body_entered"]
